# p2p-chat

./: Cargo.toml  README.md
src/: app.rs  chat_room.rs  crossterm.rs  main.rs  topic_list.rs  ui.rs
src/models/: cli.rs  mod.rs  network.rs  utils.rs
