[package]
name = "p2p-chat"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = {version = "0.51.3", features = ["yamux", "gossipsub", "identify", "tcp", "tokio", "kad", "macros"]}
tokio = {version = "1.28", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync"]}
log = "0.4"
pretty_env_logger = "0.4"
futures = "0.3.28"
clap = {version = "4.2.7", features = ["derive"]}
async-std = "1.12"
libp2p-noise = "0.42.2"
# speedy = "0.8.4"
